# geodude_ros2

./: .gitignore  .gitmodules  README.md  start.py
docker/: README.md  dockerfile.isaacsim4.humble.hardware  dockerfile.isaacsim4.iron.hardware
geodude_hardware/: CMakeLists.txt  README.md  geodude_hardware.xml  package.xml
geodude_hardware/config/: geodude_ros2_controllers.yaml  joint_poses.json
geodude_hardware/config/left_wam7w/: calibration.conf  default.conf  gravitycal.conf  wam7w.conf  zerocal.conf
geodude_hardware/config/right_wam7w/: calibration.conf  default.conf  gravitycal.conf  wam7w.conf  zerocal.conf
geodude_hardware/include/geodude_hardware/: barrett.hpp  vention.hpp  vention_api.hpp
geodude_hardware/launch/: geodude_hardware.launch.py
geodude_hardware/src/: barrett.cpp  time_vention.cpp  vention.cpp  vention_api.cpp  zero_barrett.cpp  zero_vention.cpp
geodude_hardware/test/: test_barrett.cpp  test_vention.cpp
geodude_hardware/urdf/: barrett.ros2_control.xacro  geodude_hardware.xacro  initial_mock_positions_left.yaml  initial_mock_positions_vention.yaml  vention.ros2_control.xacro
geodude_left_arm_ikfast_plugin/: CMakeLists.txt  geodude_left_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
geodude_left_arm_ikfast_plugin/src/: geodude_left_arm_ikfast_moveit_plugin.cpp  geodude_left_arm_ikfast_solver.cpp
geodude_moveit/: .setup_assistant  CMakeLists.txt  package.xml
geodude_moveit/config/: geodude.srdf  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  sensors_3d.yaml
geodude_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
geodude_perception/: README.md  package.xml  setup.cfg  setup.py
geodude_perception/config/: perception.rviz
geodude_perception/geodude_perception/: detect_image.py  image_repub.py
geodude_perception/launch/: track_object.launch.py
geodude_perception/meshes/Mac_and_cheese_0_1/: Mac_and_cheese_0_1.obj.mtl
geodude_perception/meshes/can/: can.mtl  can_simplified.obj.mtl
geodude_perception/meshes/cube/: cube_centered.obj.mtl
geodude_right_arm_ikfast_plugin/: CMakeLists.txt  geodude_right_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
geodude_right_arm_ikfast_plugin/src/: geodude_right_arm_ikfast_moveit_plugin.cpp  geodude_right_arm_ikfast_solver.cpp
geodude_simulation/: install.sh
geodude_simulation/isaac_geodude/launch/: isaac_moveit.py  python.sh
