<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>geodude_hardware</name>
  <version>0.0.1</version>
  <author email="ekgordon@cs.uw.edu">Ethan K. Gordon</author>
  <author email="athp1103@uw.edu">Atharva A. Pradhan</author>
  <description>ROS Hardware Interfaces for Geodude</description>
  <maintainer email="ekgordon@cs.uw.edu">Ethan K. Gordon</maintainer>
  <maintainer email="athp1103@uw.edu">Atharva A. Pradhan</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>topic_based_ros2_control</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>rclcpp_lifecycle</test_depend>
  <test_depend>hardware_interface</test_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
